// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > getModelsSearch > 200 > ok 1`] = `
{
  "models": [
    {
      "description": "description",
      "id": "test",
      "name": "name",
      "tags": [
        "tag",
      ],
    },
  ],
}
`;

exports[`routes > model > getModelsSearch > audit > expected call 1`] = `
[
  {
    "collaborators": undefined,
    "createdAt": undefined,
    "description": "description",
    "id": "test",
    "kind": undefined,
    "name": "name",
    "organisation": undefined,
    "sourceModelId": undefined,
    "state": undefined,
    "tags": [
      "tag",
    ],
    "updatedAt": undefined,
    "visibility": undefined,
  },
]
`;
